--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:studio": "npx prisma studio",
+    "db:push": "npx prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18"
   },
