--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.0",
     "prisma": "^5.10.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
