--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
