--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
