--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
